Set: Improve tooltip text

--- a/src/set.tex
+++ b/src/set.tex
@@ -40,7 +40,10 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{Set}
 
-const GAME_DESC = "Set is a game.";
+const GAME_DESC = "In this game you are shown a selection from 81 cards with symbols on them.\
+It is your job to find a so called set, containing three cards, where each attribute\
+is either the same or for each card different. Example: You may find a set,\
+where the symbol is the same but color and appearance differ.";
 
 const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
