--- a/src/gameoflife.tex
+++ b/src/gameoflife.tex
@@ -40,15 +40,20 @@ Text\
 Text,\
 Text.";
 
-var fieldWidth = AFMakeNumber(\fieldWidth);
-var fieldHeight = AFMakeNumber(\fieldHeight);
+var FIELD_WIDTH = AFMakeNumber(\fieldWidth);
+var FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 
 var complField1 = new Array();
 var complField2 = new Array();
 
 var fieldIdx = 0;
+var currentShape = 8;
+var shapeMode = true;
+
 const DEAD = 0;
 const ALIVE = 1;
+
+% var addShapeasdasd = true;
 
 var colors = new Array(
     color.black,
@@ -58,26 +63,52 @@ var colors = new Array(
     [ "RGB", 0.560, 0.078, 0.533 ]
 );
 
+var shapes = new Array(
+    % Still lifes
+    [[0, 0], [1, 0], [0, 1], [1, 1]], % Block
+    [[1, 0], [2, 0], [0, 1], [3, 1], [1, 2], [2, 2]], % Beehive
+    [[1, 0], [2, 0], [0, 1], [3, 1], [1, 2], [2, 3], [3, 2]], % Loaf
+    [[0, 0], [1, 0], [0, 1], [2, 1], [1, 2]], % Boat
+    [[1, 0], [0, 1], [2, 1], [1, 2]], % Tub
+    % Oscillators
+    [[1, 0], [1, 1], [1, 2]], % Blinker
+    [[1, 1], [2, 1], [3, 1], [0, 2], [1, 2], [2, 2]], % Toad
+    [[0, 0], [1, 0], [0, 1], [3, 2], [2, 3], [3, 3]], % Beacon
+    [[4, 2], [5, 2], [6, 2], [10, 2], [11, 2], [12, 2],
+        [2, 4], [7, 4], [9, 4], [14, 4],
+        [2, 5], [7, 5], [9, 5], [14, 5],
+        [2, 6], [7, 6], [9, 6], [14, 6],
+        [4, 7], [5, 7], [6, 7], [10, 7], [11, 7], [12, 7],
+        [4, 9], [5, 9], [6, 9], [10, 9], [11, 9], [12, 9],
+        [2, 10], [7, 10], [9, 10], [14, 10],
+        [2, 11], [7, 11], [9, 11], [14, 11],
+        [2, 12], [7, 12], [9, 12], [14, 12],
+        [4, 14], [5, 14], [6, 14], [10, 14], [11, 14], [12, 14]
+    ], % Pulsar
+    [[5, 4], [5, 5], [4, 6], [6, 6], [5, 7], [5, 8], [5, 9], [5, 10], [4, 11], [6, 11], [5, 12], [5, 13]], % Pentadecathlon
+    % Spaceships
+    [[1, 0], [2, 1], [0, 2], [1, 2], [2, 2]], % Glider
+    [[0, 0], [3, 0], [4, 1], [0, 2], [4, 2], [1, 3], [2, 3], [3, 3], [4, 3]], % Light-weight spaceship
+    [[2, 0], [0, 1], [4, 1], [5, 2], [0, 3], [5, 3], [1, 4], [2, 4], [3, 4], [4, 4], [5, 4]], % Middle-weight spaceship
+    [[2, 0], [3, 0], [0, 1], [5, 1], [6, 2], [0, 3], [6, 3], [1, 4], [2, 4], [3, 4], [4, 4], [5, 4], [6, 4]] % Heavy-weight spaceship
+);
+
 highlightcolor = [ "RGB", 0.984, 0.960, 0.176 ];
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 function initialise() {
-    for (var row = 0; row < fieldHeight; row++) {
+    for (var row = 0; row < FIELD_HEIGHT; row++) {
         var tmp1 = new Array();
         var tmp2 = new Array();
-        for (var column = 0; column < fieldWidth; column++) {
+        for (var column = 0; column < FIELD_WIDTH; column++) {
             tmp1.push(DEAD);
             tmp2.push(DEAD);
         }
         complField1.push(tmp1);
         complField2.push(tmp2);
     }
-
-    complField1[5][5] = ALIVE;
-    complField1[6][5] = ALIVE;
-    complField1[7][5] = ALIVE;
 
     initialiseButtons();
 
@@ -88,6 +119,16 @@ function initialise() {
 }
 
 function initialiseButtons() {
+    var funcName = "addShape";
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
+            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
+            this.getField("pos" + x + "-" + y).borderColor = color.transparent;
+            this.getField("pos" + x + "-" + y).fillColor = color.transparent;
+        }
+    }
+
     this.getField("info").fillColor = color.transparent;
     this.getField("info").borderColor = color.transparent;
 
@@ -148,8 +189,8 @@ function process() {
     var state = DEAD;
     var result = DEAD;
     var n = 0;
-    for (var x = 0; x < fieldWidth; x++) {
-        for (var y = 0; y < fieldHeight; y++) {
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
             if (fieldIdx == 1) {
                 state = complField2[y][x];
             } else {
@@ -188,7 +229,7 @@ function getNeighbourCount(pX, pY) {
     for (var x = pX - 1; x <= pX + 1; x++) {
         for (var y = pY - 1; y <= pY + 1; y++) {
             % Ignore own position and border
-            if ((x == pX && y == pY) || x < 0 || y < 0 || x >= fieldWidth || y >= fieldHeight) {
+            if ((x == pX && y == pY) || x < 0 || y < 0 || x >= FIELD_WIDTH || y >= FIELD_HEIGHT) {
                 continue;
             }
             if ((fieldIdx == 1 && complField2[y][x] == ALIVE) || (fieldIdx == 0 && complField1[y][x] == ALIVE)) {
@@ -199,11 +240,41 @@ function getNeighbourCount(pX, pY) {
     return counter;
 }
 
+function clear() {
+}
+
+function addShape(x, y) {
+    if (!shapeMode) {
+        printInfoText("Enable shape mode to add shapes.");
+        return;
+    }
+
+    currentShape = this.getField("shapeIdx").currentValueIndices;
+
+    for (var pos = 0; pos < shapes[currentShape].length; pos++) {
+        var eX = shapes[currentShape][pos][0] + x;
+        var eY = shapes[currentShape][pos][1] + y;
+
+        if (eX < 0 || eY < 0 || eX >= FIELD_WIDTH || eY >= FIELD_HEIGHT) {
+            continue;
+        }
+
+        if (fieldIdx == 0) {
+            complField1[eY][eX] = ALIVE;
+        } else {
+            complField2[eY][eX] = ALIVE;
+        }
+    };
+
+    printInfoText("Added shape " + currentShape + ".");
+}
+
 function draw() {
     var field;
-    for (var x = 0; x < fieldWidth; x++) {
-        for (var y = 0; y < fieldHeight; y++) {
-            field = this.getField("pos" + x + y);
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            % TODO this needs to be changed everywhere
+            field = this.getField("pos" + x + "-" + y);
             field.delay = true;
             var value = DEAD;
             if (fieldIdx == 1) {
@@ -279,7 +350,7 @@ function printInfoText(text) {
                     \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
                         \TextField[%
                             width=\blocksize, height=\blocksize,%
-                            bordercolor=white, name=pos#1#2, readonly=true]{}%
+                            bordercolor=white, name=pos#1-#2, readonly=true]{}%
                     }\vspace{3pt}
                     \newline%
                 }%
@@ -288,10 +359,35 @@ function printInfoText(text) {
 
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
+                \PushButton[name=animate, bordercolor=white]{
+                    \begin{tcolorbox}
+                        \centering
+                        Animation\strut
+                    \end{tcolorbox}
+                } &
+                \PushButton[name=step, bordercolor=white]{
+                    \begin{tcolorbox}
+                        \centering
+                        Step\strut
+                    \end{tcolorbox}
+                } \\
+                \PushButton[name=shapemode, bordercolor=white]{
+                    \begin{tcolorbox}
+                        \centering
+                        Shape mode\strut
+                    \end{tcolorbox}
+                } &
+                \begin{tcolorbox}
+                    \ChoiceMenu[name=shapeIdx, width=50mm, combo]{Shape name:}{%
+                        Block, Beehive, Loaf, Boat, Tub,%
+                        Blinker, Toad, Beacon, Pulsar, Pentadecathlon,%
+                        Glider, Light-weight spaceship, Middle-weight spaceship, Heavy-weight spaceship%
+                    }%
+                \end{tcolorbox} \\
                 \PushButton[name=restart, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
-                        Restart game\strut
+                        Restart\strut
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
