--- a/src/gameoflife.tex
+++ b/src/gameoflife.tex
@@ -43,12 +43,15 @@ Text.";
 var FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 var FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 
+var run;
 var complField1 = new Array();
 var complField2 = new Array();
 
+var currStep = 0;
 var fieldIdx = 0;
 var currentShape = 8;
 var shapeMode = true;
+var animate = false;
 
 const DEAD = 0;
 const ALIVE = 1;
@@ -65,6 +68,7 @@ var colors = new Array(
 
 var shapes = new Array(
     % Still lifes
+    [[0, 0]], % One
     [[0, 0], [1, 0], [0, 1], [1, 1]], % Block
     [[1, 0], [2, 0], [0, 1], [3, 1], [1, 2], [2, 2]], % Beehive
     [[1, 0], [2, 0], [0, 1], [3, 1], [1, 2], [2, 3], [3, 2]], % Loaf
@@ -95,6 +99,13 @@ var shapes = new Array(
 
 highlightcolor = [ "RGB", 0.984, 0.960, 0.176 ];
 
+%%%%%%%%%%
+% Helper %
+%%%%%%%%%%
+function getRandomInt(max) {
+    return Math.floor(Math.random() * max);
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -114,8 +125,6 @@ function initialise() {
 
     % Initial run
     runAll();
-    % Animation interval
-    run = app.setInterval("runAll()", 1000);
 }
 
 function initialiseButtons() {
@@ -129,6 +138,48 @@ function initialiseButtons() {
         }
     }
 
+    this.getField("animate").setAction("MouseDown", "toggleAnimation();");
+    this.getField("animate").highlight="none";
+    this.getField("animatetxt").setAction("MouseDown", "toggleAnimation();");
+    this.getField("animatetxt").fillColor = color.transparent;
+    this.getField("animatetxt").borderColor = color.transparent;
+    if (animate) {
+        this.getField("animatetxt").value = "On";
+    } else {
+        this.getField("animatetxt").value = "Off";
+    }
+
+    this.getField("step").setAction("MouseDown", "runAll();");
+    this.getField("step").highlight="none";
+
+    this.getField("shapemode").setAction("MouseDown", "toggleMode();");
+    this.getField("shapemode").highlight="none";
+    this.getField("shapemodetxt").setAction("MouseDown", "toggleMode();");
+    this.getField("shapemodetxt").fillColor = color.transparent;
+    this.getField("shapemodetxt").borderColor = color.transparent;
+    if (shapeMode) {
+        this.getField("shapemodetxt").value = "On";
+    } else {
+        this.getField("shapemodetxt").value = "Off";
+    }
+
+    this.getField("shapeidx").currentValueIndices = 0;
+    this.getField("shapeidx").fillColor = color.transparent;
+    this.getField("shapeidx").borderColor = color.white;
+
+    this.getField("fillrnd").setAction("MouseDown", "fillRandom();");
+    this.getField("fillrnd").highlight="none";
+
+    this.getField("percentage").currentValueIndices = 0;
+    this.getField("percentage").fillColor = color.transparent;
+    this.getField("percentage").borderColor = color.white;
+
+    this.getField("clear").setAction("MouseDown", "clear();");
+    this.getField("clear").highlight="none";
+
+    this.getField("currstep").fillColor = color.transparent;
+    this.getField("currstep").borderColor = color.transparent;
+
     this.getField("info").fillColor = color.transparent;
     this.getField("info").borderColor = color.transparent;
 
@@ -136,8 +187,6 @@ function initialiseButtons() {
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
-
-    printInfoText("Info Text!");
 }
 
 /**
@@ -175,14 +224,65 @@ function tooltip(on) {
     }
 }
 
-%%%%%%%%%%%%%%%%%%%%%
-% Draw and coloring %
-%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%
+% Toggle states %
+%%%%%%%%%%%%%%%%%
+function toggleAnimation() {
+    animate = !animate;
+
+    var field = this.getField("animatetxt");
+    field.delay = true;
+    if (animate) {
+        field.value = "On";
+
+        % Animation interval
+        run = app.setInterval("runAll()", 1000);
+        printInfoText("Enabled animation.");
+
+        if (shapeMode) {
+            toggleMode();
+            printInfoText("Enabled animation and disabled shape mode.");
+        }
+    } else {
+        field.value = "Off";
+        app.clearInterval(run);
+        printInfoText("Disabled animation.");
+    }
+    field.delay = false;
+
+}
+
+function toggleMode() {
+    shapeMode = !shapeMode;
+
+    var field = this.getField("shapemodetxt");
+    field.delay = true;
+    if (shapeMode) {
+        field.value = "On";
+        printInfoText("Enabled shape mode.");
+
+        if (animate) {
+            toggleAnimation();
+            printInfoText("Disabled animation and enabled shape mode.");
+        }
+    } else {
+        field.value = "Off";
+        printInfoText("Disabled shape mode.");
+    }
+    field.delay = false;
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%
+% Loop and processing %
+%%%%%%%%%%%%%%%%%%%%%%%
 function runAll() {
     process();
+
     fieldIdx = (fieldIdx + 1) \% 2;
-    printInfoText("Idx: " + fieldIdx);
-    draw();
+    currStep++;
+    this.getField("currstep").value = "Current step: " + currStep + ".";
+
+    draw(fieldIdx);
 }
 
 function process() {
@@ -240,7 +340,34 @@ function getNeighbourCount(pX, pY) {
     return counter;
 }
 
+%%%%%%%%%%%%%%%%%%
+% Fill and clear %
+%%%%%%%%%%%%%%%%%%
 function clear() {
+    currStep = 0;
+    this.getField("currstep").value = "Current step: " + currStep + ".";
+
+    if (animate) {
+        animate = false;
+        var field = this.getField("animatetxt");
+        field.delay = true;
+        field.value = "Off";
+        field.delay = false;
+
+        app.clearInterval(run);
+
+        printInfoText("Clear field and disabled animation.");
+    } else {
+        printInfoText("Clear field.");
+    }
+
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            complField1[y][x] = DEAD;
+            complField2[y][x] = DEAD;
+        }
+    }
+    draw(fieldIdx);
 }
 
 function addShape(x, y) {
@@ -249,7 +376,7 @@ function addShape(x, y) {
         return;
     }
 
-    currentShape = this.getField("shapeIdx").currentValueIndices;
+    currentShape = this.getField("shapeidx").currentValueIndices;
 
     for (var pos = 0; pos < shapes[currentShape].length; pos++) {
         var eX = shapes[currentShape][pos][0] + x;
@@ -267,9 +394,30 @@ function addShape(x, y) {
     };
 
     printInfoText("Added shape " + currentShape + ".");
+    draw((fieldIdx + 1) \% 2);
 }
 
-function draw() {
+function fillRandom() {
+    var percentage = this.getField("percentage").value;
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            if (getRandomInt(100) < percentage) {
+                if (fieldIdx == 0) {
+                    complField1[y][x] = ALIVE;
+                } else {
+                    complField2[y][x] = ALIVE;
+                }
+            }
+        }
+    }
+    draw((fieldIdx + 1) \% 2);
+    %this.getField("info").setFocus();
+}
+
+%%%%%%%%
+% Draw %
+%%%%%%%%
+function draw(idx) {
     var field;
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
@@ -277,7 +425,7 @@ function draw() {
             field = this.getField("pos" + x + "-" + y);
             field.delay = true;
             var value = DEAD;
-            if (fieldIdx == 1) {
+            if (idx == 1) {
                 value = complField1[y][x];
             } else {
                 value = complField2[y][x];
@@ -362,32 +510,48 @@ function printInfoText(text) {
                 \PushButton[name=animate, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
-                        Animation\strut
+                        \TextField[name=animatetxt, height=0.35cm, width=0.5cm, readonly=true]{Animation:}
+                        \strut
                     \end{tcolorbox}
                 } &
                 \PushButton[name=step, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
-                        Step\strut
+                        Next step\strut
                     \end{tcolorbox}
                 } \\
                 \PushButton[name=shapemode, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
-                        Shape mode\strut
+                        \TextField[name=shapemodetxt, height=0.35cm, width=0.5cm, readonly=true]{Shape mode:}
+                        \strut
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \ChoiceMenu[name=shapeIdx, width=50mm, combo]{Shape name:}{%
-                        Block, Beehive, Loaf, Boat, Tub,%
+                    \centering
+                    \ChoiceMenu[name=shapeidx, height=0.35cm, width=0.5cm, combo, commitonselchange=true]{Shape name:}{%
+                        One, Block, Beehive, Loaf, Boat, Tub,%
                         Blinker, Toad, Beacon, Pulsar, Pentadecathlon,%
                         Glider, Light-weight spaceship, Middle-weight spaceship, Heavy-weight spaceship%
                     }%
-                \end{tcolorbox} \\
-                \PushButton[name=restart, bordercolor=white]{
+                    \strut
+                \end{tcolorbox} \\[-0.5cm]% TODO why do we need -0.5 here
+                \PushButton[name=fillrnd, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
-                        Restart\strut
+                        \ChoiceMenu[name=percentage, height=0.35cm, width=0.5cm, combo, commitonselchange=true]{Fill random with \% alive:}{%
+                            20, 40, 60, 80,%
+                        }%
+                        \strut
+                    \end{tcolorbox}
+                } &%
+                \begin{tcolorbox}
+                    \TextField[name=currstep, width=\linewidth, readonly=true]{}
+                \end{tcolorbox} \\[-0.5cm]% TODO why do we need -0.5 here
+                \PushButton[name=clear, bordercolor=white]{
+                    \begin{tcolorbox}
+                        \centering
+                        Clear\strut
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
