--- a/src/minesweeper.tex
+++ b/src/minesweeper.tex
@@ -35,31 +35,46 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{minesweeper}
 
-const GAME_DESC = "Text.\
-Text\
-Text,\
-Text.";
+const GAME_DESC = "This is a logic based puzzle game.\
+The goal is to reveal as much fields as possible without revealing a mine.\
+These mines are distributed randomly. Everytime a field is revealed it shows a counter\
+of how many mines are in the neighbourhood allowing for logicall deduction where\
+a mine can be.";
 
 var FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 var FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 
-var complField = new Array();
-var gameover = false;
-
+% Constants
 const MINE = -1;
 const EMPTY = 0;
 const HIDDEN = false;
 const VISIBLE = true;
+const REVEAL = true;
+const LOCK = false;
+
+% Globals
+% The game field array
+var complField = new Array();
+var gameover = false;
+% Is the game in reveal or lock mode
+var gameMode = REVEAL;
+% Amount of fields that need to be revealed to win
+var fieldsToReveal = FIELD_WIDTH * FIELD_HEIGHT;
+var revealed = 0;
+var mines = 0;
 
 var colors = new Array(
-    color.black,
-    [ "RGB", 0.843, 0.078, 0.058 ],
-    [ "RGB", 0.203, 0.603, 0.054 ],
-    [ "RGB", 0.078, 0.305, 0.560 ],
-    [ "RGB", 0.560, 0.078, 0.533 ]
+    color.white, % Mine
+    [ "RGB", 0.0, 0.0, 0.0 ], % Empty
+    [ "RGB", 0.0, 0.0, 1.0 ], % 1
+    [ "RGB", 0.0, 0.468, 0.0 ], % 2
+    [ "RGB", 0.996, 0.011, 0.011 ], % 3
+    [ "RGB", 0.011, 0.011, 0.494 ], % 4
+    [ "RGB", 0.470, 0.011, 0.011 ], % 5
+    [ "RGB", 0.0, 0.482, 0.482 ], % 6
+    [ "RGB", 0.0, 0.0, 0.0 ], % 7
+    [ "RGB", 0.490, 0.490, 0.490 ] % 8
 );
-
-highlightcolor = [ "RGB", 0.984, 0.960, 0.176 ];
 
 %%%%%%%%%%
 % Helper %
@@ -72,14 +87,16 @@ function getRandomInt(max) {
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 function initialise() {
+    % Fill the array with the default content and infos
     for (var row = 0; row < FIELD_HEIGHT; row++) {
         var tmp = new Array();
         for (var column = 0; column < FIELD_WIDTH; column++) {
-            tmp.push([HIDDEN, EMPTY]);
+            tmp.push([HIDDEN, EMPTY, !LOCK]);
         }
         complField.push(tmp);
     }
 
+    % Init the GUI
     initialiseButtons();
 
     fillMines();
@@ -87,7 +104,12 @@ function initialise() {
     printInfoText("Ready to play, good luck.");
 }
 
+/**
+ * Initialise all buttons from the GUI.
+ * For example add callbacks and set the correct colors.
+ */
 function initialiseButtons() {
+    % Set the callbacks and attributes of each small field
     var funcName = "reveal";
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
@@ -100,15 +122,32 @@ function initialiseButtons() {
         }
     }
 
+    % Mode change button setup
+    this.getField("reveal").setAction("MouseUp", "changeMode();");
+    var field = this.getField("revealtxt");
+    %field.setAction("MouseUp", "changeMode();");
+    field.value = "On";
+    field.borderColor = color.transparent;
+    field.fillColor = color.transparent;
+
+    this.getField("lock").setAction("MouseUp", "changeMode();");
+    var field = this.getField("locktxt");
+    %field.setAction("MouseUp", "changeMode();");
+    field.value = "Off";
+    field.borderColor = color.transparent;
+    field.fillColor = color.transparent;
+
+    % Restat button setup
     this.getField("restart").setAction("MouseDown", "restart();");
     this.getField("restart").highlight="none";
 
     this.getField("percentage").currentValueIndices = 2;
 
+    % Info field setup
     this.getField("info").fillColor = color.transparent;
     this.getField("info").borderColor = color.transparent;
 
-    % Tooltip setup
+    % Tooltip button setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
@@ -153,8 +192,11 @@ function tooltip(on) {
 % Fill and restart %
 %%%%%%%%%%%%%%%%%%%%
 function fillMines() {
+    % Get the amount of mines using the gui-percentage
+    mines = (FIELD_WIDTH * FIELD_HEIGHT) / 100 * this.getField("percentage").value;
+    % Reduce the count of fields to reveal
+    fieldsToReveal -= mines;
     % Distribute the mines onto the field
-    var mines = (FIELD_WIDTH * FIELD_HEIGHT) / 100 * this.getField("percentage").value;
     var x = 0;
     var y = 0;
     for (var i = 0; i < mines; i++) {
@@ -166,15 +208,17 @@ function fillMines() {
     % For each field that is not a mine calc the mine count
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
+            % Ignore fields with mine on it
             if (complField[y][x][1] == MINE) {
                 continue;
             }
+            % Check the neighbourhood
             for (var xx = x - 1; xx <= x + 1; xx++) {
                 for (var yy = y - 1; yy <= y + 1; yy++) {
                     if (xx < 0 || yy < 0 || xx >= FIELD_WIDTH || yy >= FIELD_HEIGHT || (xx == x && yy == y)) {
                         continue;
                     }
-
+                    % Adjust count
                     if (complField[yy][xx][1] == MINE) {
                         complField[y][x][1]++;
                     }
@@ -184,48 +228,110 @@ function fillMines() {
     }
 }
 
+/**
+ * Restart the game by reseting everything to default.
+ */
 function restart() {
+    % Remove focus so the cursor is not shown
+    this.getField("info").setFocus();
+
     gameover = false;
 
     % Clear the field
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
-             complField[y][x] = [HIDDEN, EMPTY];
+             complField[y][x] = [HIDDEN, EMPTY, !LOCK];
         }
     }
 
+    % Redistribute mines and redraw
+    revealed = 0;
+    fieldsToReveal = FIELD_WIDTH * FIELD_HEIGHT;
     fillMines();
     drawAll();
     printInfoText("Restarted the game.");
 }
 
+/**
+ * Change the gameMode to either Reveal or Lock.
+ */
+function changeMode() {
+    gameMode = !gameMode;
+
+    if (gameMode == REVEAL) {
+        this.getField("revealtxt").value = "On";
+        this.getField("locktxt").value = "Off";
+    } else {
+        this.getField("revealtxt").value = "Off";
+        this.getField("locktxt").value = "On";
+    }
+}
+
+/**
+ * Reveal the field x, y.
+ * If the Lockmode is activated the field will be marked and
+ * can not be reveal unless the lock is lifted.
+ * If the revealmode is activated the field is revealed and
+ * either shows a number, an area of numbers or a mine.
+ * If the game is over nothing will happen.
+ *
+ * @param {Number} x The x coordinate
+ * @param {Number} y The y coordinate
+ */
 function reveal(x, y) {
+    % Clear output
+    printInfoText("");
     if (gameover) {
         return;
     }
 
+    % Lock the field or lift it depending on current state
+    if (gameMode == LOCK) {
+        if (complField[y][x][2] != LOCK) {
+            complField[y][x][2] = LOCK;
+        } else {
+            complField[y][x][2] = !LOCK
+        }
+        draw(x, y);
+        this.getField("info").setFocus();
+        return;
+    }
+
+    % Ignore click if locked
+    if (complField[y][x][2] == LOCK) {
+        return;
+    }
+
+    % Make visible
     complField[y][x][0] = VISIBLE;
 
+    % If the field is a mine the game is over
     if (complField[y][x][1] == MINE) {
         gameover = true;
         printInfoText("You hit a mine and lost!");
     }
 
     % Reveal all empty spots in the neighbourhood
+    % This happens if there are no mines near by.
     if (complField[y][x][1] == EMPTY) {
         var stack = [[x, y]];
+        % For each nh-field put it on a stack unless it is already visible.
+        % Iterate the stack and reveal the fields.
         while (stack.length > 0) {
             var elem = stack.pop();
             for (var xx = elem[0] - 1; xx <= elem[0] + 1; xx++) {
                 for (var yy = elem[1] - 1; yy <= elem[1] + 1; yy++) {
+                    % Ignore out of bounds, came field and already visible
                     if (xx < 0 || yy < 0 || xx >= FIELD_WIDTH || yy >= FIELD_HEIGHT ||
                         (xx == elem[0] && yy == elem[1]) || complField[yy][xx][0] == VISIBLE) {
                         continue;
                     }
                     % Reveal the field
                     complField[yy][xx][0] = VISIBLE;
+                    % Adjust counter for each field
+                    revealed++;
                     draw(xx, yy);
-                    % If it is a number then dont add it to the stack
+                    % If it is a number then do not add it to the stack
                     if (complField[yy][xx][1] != EMPTY) {
                         continue;
                     }
@@ -234,6 +340,15 @@ function reveal(x, y) {
                 }
             }
         }
+    } else {
+        % Add one if there was one field revealed
+        revealed++;
+    }
+
+    % Win condition
+    if (revealed == fieldsToReveal) {
+        gameover = true;
+        printInfoText("You found all mines and won!");
     }
 
     draw(x, y);
@@ -242,6 +357,9 @@ function reveal(x, y) {
 %%%%%%%%
 % Draw %
 %%%%%%%%
+/**
+ * Draws the complete field.
+ */
 function drawAll() {
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
@@ -250,21 +368,37 @@ function drawAll() {
     }
 }
 
+/**
+ * Draw the field at the coordinates x, y.
+ *
+ * @param {Number} x The x coordinate
+ * @param {Number} y The y coordinate
+ */
 function draw(x, y) {
+    % Retrieve the field data
     var field = this.getField("pos" + x + "-" + y);
     field.delay = true;
 
     if (complField[y][x][0] == VISIBLE) {
-        if (complField[y][x][1] == MINE) {
+        var val = complField[y][x][1];
+        % Is the field a mine, a number or empty
+        if (val == MINE) {
             field.fillColor = color.black;
             field.borderColor = color.black;
+            field.textColor = colors[val + 1];
             field.value = "M";
-        } else if (complField[y][x][1] != EMPTY) {
-            field.value = complField[y][x][1];
+        } else if (val != EMPTY) {
+            field.value = val;
+            field.textColor = colors[val + 1];
         } else {
             field.fillColor = color.transparent;
             field.borderColor = color.transparent;
         }
+    } else if (complField[y][x][2] == LOCK) {
+        field.fillColor = color.transparent;
+        field.borderColor = color.black;
+        % Fancy x for marking mines
+        field.value = String.fromCharCode(0x2717);
     } else {
         field.borderColor = color.black;
         field.fillColor = color.white;
@@ -338,6 +472,20 @@ function printInfoText(text) {
 
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
+                \PushButton[name=reveal, bordercolor=white]{
+                    \begin{tcolorbox}
+                        \centering
+                        \TextField[name=revealtxt, height=0.35cm, width=0.5cm, readonly=true]{Revel mode:}
+                        \strut
+                    \end{tcolorbox}
+                } &
+                \PushButton[name=lock, bordercolor=white]{
+                    \begin{tcolorbox}
+                        \centering
+                        \TextField[name=locktxt, height=0.35cm, width=0.5cm, readonly=true]{Lock mode:}
+                        \strut
+                    \end{tcolorbox}
+                } \\
                 \PushButton[name=restart, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
